Changelog
=========

Version 1.65
	Option added to order revision by date or by branch	
	
Version 1.64
	Commits are now ordered by date
	Fixed bug in commit dialog

Version 1.63
	Added file filter to revision graph filter
	Shortened title of browse window
	Added checkout revision context menu in the Browse list
	Added a Recent Repositories submenu in the File menu
	Added commit hash to commit info dialogs
	Close solve mergeconflicts dialog automaticly after all conflicts are solved
	Commit message is now remembered when commit dialog is closed without making the commit
	Packed with Git-1.6.3

Version 1.62
	Fixed exception when right click on gridheaders in revision log
	Last selection and scroll position in revision log are remembered
	Added "Delete brach" function to context menu revision log
	Packed with Git-1.6.2.2

Version 1.61
	Fixed bug that mergeconflicts of files listed in .gitignore are hidden

Version 1.60
	Fixed bug in Manage remotes dialog

Version 1.59
	Remote branches can be checked out and tracked from the checkout branch dialog
	Manage remote branch dialog improved

Version 1.58
	Added support for Araxis merge and DiffMerge

Version 1.57
	Spelling checker performance improved
	Red wiggly lines added to mark incorrect spelled words	
	Added search dialog to most file viewers
	Added delete tag function to context menu revision grid
	Added add tag function to recover lost objects dialog
	Added enter support to the small create tag and create branch dialogs
	Fixed file history view on deleted or moved files	
	Packed with Git-1.6.1 to avoid a bug in Git-1.6.2
	When installing 64bit version, both 32bit and 64bit shell extensions will be registered
	Application settings are saved when closing settings dialog instead of when application exits
	Revert commit handles merge conflicts better
	Diff in browse dialog now shows the diff between revisions if 2 revisions are selected